Closed Bug 412033 Opened 17 years ago Closed 17 years ago

non-stretchy-or-centred operators don't paint on scrolling with Cambria Math

Categories

(Core :: MathML, defect, P3)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file, 1 obsolete file)

When STIX fonts are not installed but Cambria Math is, MathML operators that
do not use nsMathMLChar (those that are not stretchy or centred,
e.g. <mo>&leqq<mo>) don't paint when scrolling into the visible
region. Characters paint again when selected.

http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/layout/mathml/base/src/nsMathMLmoFrame.cpp&rev=1.99&mark=898-907#898

aDesiredStretchSize.height is based on the maximum of tight glyph bounds and
GetMetricsFor(GetStyleFont()->mFont)->GetMaxAscent/Descent, which is the
ascent and descent of the first CSS font on the system.  However the child
frame height is based on the maximum ascent of any font used to provide a
glyph, which can be much larger.  Therefore this code is truncating the size
of the frame, which is used as the overflow area, which is used to determine
whether painting is necessary.
Flags: blocking1.9?
Leaving child frames with their desired size.

I've left the code for when using nsMathMLChar instead of the descendent text frame, because I don't know what it was meant to do, and "#if 0"ed it out because it doesn't seem to be doing what it was meant to do.
Attachment #296870 - Flags: review?(roc)
Priority: -- → P3
Just remove this code, don't #if 0 it. Maybe leave a comment behind to say what this code was trying to do and we're not doing anymore, up to you.
Removed the code and left a comment.
Attachment #296870 - Attachment is obsolete: true
Attachment #296875 - Flags: review?(roc)
Attachment #296870 - Flags: review?(roc)
Attachment #296875 - Flags: approval1.9?
Attachment #296875 - Flags: approval1.9? → approval1.9+
Checked-in:
1.100       mozilla/layout/mathml/base/src/nsMathMLmoFrame.cpp
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Flags: blocking1.9?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: