Bug 412033 - non-stretchy-or-centred operators don't paint on scrolling. Don't change the size of child frames. r+sr=roc, a=schrep